# compiling_templates

exe/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: customvector.h
lib/src/: customvector.cpp
librepo/: CMakeLists.txt
repo/: CMakeLists.txt
repo/src/: main.cpp
